--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-freemarker -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-freemarker</artifactId>
+    <version>2.5.5</version>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
